[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/room_screen/room_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shared/numpad/numpad.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/room_screen/players.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[node name="RoomScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.772491
margin_bottom = 0.772461
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.0
margin_top = -247.5
margin_right = 401.0
margin_bottom = 247.5

[node name="Title" type="Label" parent="Panel"]
margin_left = 308.076
margin_top = 18.692
margin_right = 487.076
margin_bottom = 62.692
custom_fonts/font = SubResource( 1 )
text = "Room"
align = 1

[node name="Numpad" parent="Panel" instance=ExtResource( 3 )]
margin_left = 48.0
margin_top = 78.0
margin_right = 348.0
margin_bottom = 378.0
readonly = true

[node name="NumpadLabel" type="Label" parent="Panel"]
margin_left = 61.545
margin_top = 395.0
margin_right = 332.545
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "Show this pattern to your friend for joining the game"
autowrap = true

[node name="RightArea" type="VBoxContainer" parent="Panel"]
margin_left = 379.0
margin_top = 81.0
margin_right = 743.0
margin_bottom = 386.0

[node name="Title" type="Label" parent="Panel/RightArea"]
margin_right = 364.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "The title of the game goes here"

[node name="Description" type="Label" parent="Panel/RightArea"]
margin_top = 41.0
margin_right = 364.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 4 )
text = "the description of the game goes to here, very very very very very very very long indeed"
autowrap = true

[node name="Placeholder" type="Control" parent="Panel/RightArea"]
margin_top = 98.0
margin_right = 364.0
margin_bottom = 301.0
size_flags_vertical = 3

[node name="Players" parent="Panel/RightArea" instance=ExtResource( 4 )]
margin_top = 305.0

[node name="ButtonLeave" type="Button" parent="Panel"]
margin_left = 377.0
margin_top = 413.0
margin_right = 550.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 5 )
text = "Leave"

[node name="ButtonStartGame" type="Button" parent="Panel"]
visible = false
margin_left = 566.0
margin_top = 412.163
margin_right = 743.0
margin_bottom = 456.163
custom_fonts/font = SubResource( 5 )
disabled = true
text = "Start Game"

[node name="StatusPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="StatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Panel" type="Panel" parent="StatusPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -39.5
margin_right = 239.0
margin_bottom = 39.5

[node name="Label" type="Label" parent="StatusPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "you have been kicked out of the room"
align = 1
valign = 1

[connection signal="kick_player" from="Panel/RightArea/Players" to="." method="_on_kick_player"]
[connection signal="pressed" from="Panel/ButtonLeave" to="." method="_on_button_leave_pressed"]
[connection signal="pressed" from="Panel/ButtonStartGame" to="." method="_on_start_game_button_pressed"]
